; In 3.0 we can use directory targets
(rule
 (alias pip-build)
 (deps
  (universe)
  (package coq-serapi)
   ; at some point maybe we prefer (glob pycoq/*.py)
   epycoq/__init__.py
   epycoq/epycoq.so)
 (targets build)
 (action
  (progn
   (run python3 %{dep:setup.py} build))))

(rule
 (alias pip-install)
 (deps
  (universe)
  (package coq-serapi)
   ; at some point maybe we prefer (glob pycoq/*.py)
   epycoq/__init__.py
   epycoq/epycoq.so)
 (action
  (progn
   (run python3 %{dep:setup.py} build)
   (run pip3 install .))))
